WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271292
[UnifiedPDF] PDF flickers/flashes while zooming
https://bugs.webkit.org/show_bug.cgi?id=271292
Summary
[UnifiedPDF] PDF flickers/flashes while zooming
Simon Fraser (smfr)
Reported
2024-03-19 18:42:12 PDT
There are white (missing tile) flashes when zooming PDFs
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-03-19 18:42:23 PDT
<
rdar://122884598
>
Simon Fraser (smfr)
Comment 2
2024-03-19 18:55:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26168
EWS
Comment 3
2024-03-20 16:54:47 PDT
Committed
276433@main
(c71e10996782): <
https://commits.webkit.org/276433@main
> Reviewed commits have been landed. Closing PR #26168 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug